@startuml

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
'hide methods

title US002 Real Estate Agent - Domain Model

hide methods

class Agent {
-email
-name
-phoneNumber
-address
-store
-ccNumber
-taxNumber
-password
}

interface Property {
-area
-location
-distanceFromCityCentre
-agent
-photographs
-finalPrice
-announcementDate
-request
}

class Request{
-type
-price
-priceUnit
-isItPublished
-commissionDate
-owner
-commissionValue
-duration
}

class Land{
}

class Apartment {
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
}

class House {
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
-basement
-inhabitableLoft
-sunExposure
}


Property "1" --- "*" Agent : delivers list of all requests done to\nthat agent with the requested filters >


Agent "1" --- "0..*" Property : publishes >

Property "1" - "1" Request : has >

Property "1" -- "1" Apartment : can be >
Property "1" -- "1" Land : can be >
Property "1" -- "1" House : can be >


@enduml